--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1228,6 +1228,18 @@
             </p>
           </li>
           <li>
+            <a href="https://www.atbar.org/"><abbr>AT</abbr>bar</a>.
+            This open-source tool, developed at the University of Southampton in the <abbr>UK</abbr>,
+            can be embedded into websites and
+            <q>is designed for those who may not have their assistive technologies to hand and need a quick way of accessing text on the screen with magnification and/or text to speech etc.
+            It can help those with low vision, dyslexia and other reading difficulties, as well as those who may wish to just reduce the glare of black text on bright white backgrounds.
+            It is not designed for regular screen reader users who need their assistive technology to access the computer as well as their browser.</q>
+            <!--Accessed 13.02.2019-->
+            See also the YouTube video
+            <a href="https://www.youtube.com/watch?v=hNRXrhn8mvc"><abbr>AT</abbr>bar: a free cross-browser toolbar providing accessibility tools</a>
+            (3 minutes, 29.08.2013).
+          </li>
+          <li>
             <a href="https://github.com/able-to-include/accessibility-layer">Able to Include's accessibility-layer</a>.
           </li>
         </ul>
