Add: Fluid UI Options

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1240,6 +1240,15 @@
             (3 minutes, 29.08.2013).
           </li>
           <li>
+            <a href="https://build.fluidproject.org/infusion/demos/uiOptions/">Fluid <abbr>UI</abbr> Options</a>.
+            This open-source tool, developed at OCAD University in Toronto, Canada,
+            can be embedded into websites. See also the YouTube video
+            <a href="https://www.youtube.com/watch?v=63DqNgxtsrA">Introduction to User Interface Options</a>
+            (4 minutes, 15.09.2017).
+            For source code, see the
+            <a href="https://github.com/fluid-project/infusion">Infusion repository on GitHub</a>.
+          </li>
+          <li>
             <a href="https://github.com/able-to-include/accessibility-layer">Able to Include's accessibility-layer</a>.
           </li>
         </ul>
