--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1251,6 +1251,12 @@
           <li>
             <a href="https://github.com/able-to-include/accessibility-layer">Able to Include's accessibility-layer</a>.
           </li>
+          <li>
+            <a href="https://userway.org/">UserWay</a>:
+            <q>UserWay's plugin will instantly strengthen any weak spots that might cause issues.
+            We are proud to say that tens of millions of pages are more accessible today thanks to UserWay.</q>
+            <!--accessed 22.10.2018, 13.02.2019; tool is mentioned at https://www.audiologyandhearing.com/accessibility/-->
+          </li>
         </ul>
       </li>
     </ul>
