Add: IONOS: Alles über Screenreader

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -155,6 +155,9 @@
         See also the
         <a href="https://www.nvaccess.org/files/nvda/documentation/userGuide.html"><abbr>NVDA</abbr> User Guide</a>.
       </li>
+      <li><span lang="de"><a href="https://www.ionos.de/digitalguide/websites/web-entwicklung/screenreader/" hreflang="de">Alles über Screenreader: Blind am Computer arbeiten</a>,
+        <i class="website">IONOS</i></span>, 13.04.2018.
+      </li>
     <!--
       * Oracle: Orca Screen Reader and Magnifier [Oracle Solaris 11 Accessibility Guide for the GNOME Desktop]: https://docs.oracle.com/cd/E23824_01/html/E24675/ats-2.html 
     -->
