Add: YT: Vinux: A special operating system for the blind/visually impaired

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -220,6 +220,9 @@
         <br /><strong>Note</strong>:
         It is possible that Sonar and Vinux will merge and use Fedora as their starting point<!-- J-P Mengual, 25.02.2017 -->;
         that was the outcome of a <a href="http://wiki.vinuxproject.org/sonar_merges_with_vinux">meeting in early 2017</a>.
+        See also
+        <a href="https://www.youtube.com/watch?v=hmEnexwpNHk">Vinux: A special operating system for the blind/visually impaired</a>
+        (<i class="ytchannel">Technology for Blind</i> on YouTube, 41 minutes, <!--@@date -->2019).
         <br />According to DistroWatch,
         <a href="https://www.distrowatch.com/table.php?distribution=vinux">Vinux is a dormant project</a>.
       </li>
@@ -329,6 +332,7 @@
         However, it has not been updated since 2006 or 2007.
       </li>
     </ul>
+
   </main>
 
   <footer>
