Add: Thibault: Where does accessibility plug into the graphical desktop stack?

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -75,6 +75,13 @@
         <a href="http://meetings-archive.debian.net/pub/debian-meetings/2015/debconf15/Thanks_for_maintaining_a_desktop_environment_But_is_it_accessible.webm">direct link to Samual Thibault's talk (WebM format)</a>.
         <!--@@add subtitles; see https://wiki.debconf.org/wiki/Videoteam/Subtitles/videos_debconf15 -->
       </li>
+      <li><span lang="fr">Samuel Thibault</span>:
+        <a href="https://www.youtube.com/watch?v=DxVrIVQKHEg">Where does accessibility plug into the graphical desktop stack?</a>
+        (<i class="ytchannel">X.org Foundation</i> on YouTube, 34 minutes, 12.10.2014).
+        This video is a recording of a presentation at <abbr title="X.Org Developer's Conference">XDC</abbr> 2014.
+        For the transcript and slides, see
+        <a href="https://www.x.org/wiki/Events/XDC2014/XDC2014ThibaultAccessibility/">Samuel Thibault - Where does accessibility plug into the graphical desktop stack?</a>
+      </li>
       <li>Spencer Hunley: 
         <a href="http://opensource.com/life/15/4/6-reasons-people-disabilities-should-use-linux">6 reasons people with disabilities should use Linux</a>,
         Opensource.com, 20 April 2015.
