Add: Kira Magrann: Designing Games For Accessibility

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -288,6 +288,10 @@
         <a href="https://www.polygon.com/2019/2/10/18212897/apex-legends-settings-accessibility-disability">Apex Legends’ accessibility settings are shockingly good</a>,
         <i class="website">Polygon</i>, 10.02.2019.
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=PSaNS6nkY_M">Designing Games For Accessibility</a>
+        (<i class="ytchannel">Kira Magrann</i> on YouTube, 13 minutes, 29.05.2018).
+      </li>
     </ul>
 
 
