--- a/contentmanagement.html
+++ b/contentmanagement.html
@@ -178,6 +178,13 @@
       </li>
     </ul>
 
+    <h3>Defacto</h3>
+    <p>(Homepage: <a href="http://www.defacto-cms.com/">defacto-cms.com</a>.)
+      Defacto is a closed-source <abbr>CMS</abbr> developed by the British <abbr>UX</abbr> design and accessibility consultancy
+      <a href="https://www.nomensa.com/">Nomensa</a>.
+      One of its important features is accessibility.
+    </p>
+
     <h3>DotClear</h3>
     <p>(Homepage: <a href="http://dotclear.org/">dotclear.org</a>.) 
       See &ldquo;accessibility&rdquo; in the
