Add: Steenhout: Practical hands-on accessibility testing

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -107,6 +107,11 @@
         <a href="http://tldp.org/HOWTO/Accessibility-HOWTO/">Linux Accessibility HOWTO</a>.
         Version 3.1 of this guide was published in June 2002; the document has not been updated since that time and is outdated.
       </li>
+      <li>Steenhout, Nicolas:
+        <a href="https://www.youtube.com/watch?v=_B1o6DyLCVY">Practical hands-on accessibility testing</a>
+        (<i class="ytchannel">LinuxConfAu 2018</i>, 99 minutes, <!--@@date-->2018).
+        <!--@@watch and summarise/describe-->
+      </li>
     </ul>
 
     <h2>Desktop Environments</h2>
