Add Thibault: Making Debian for everybody

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -69,6 +69,13 @@
         about accessible installers.
       </li>
       <li><span lang="fr">Samuel Thibault</span>:
+        <a href="https://www.youtube.com/watch?v=OlTizwRjRVc">Making Debian for everybody</a>
+        (<i class="ytchannel" lang="fr">Capitole du Libre</i> on YouTube, 48 minutes, 07.01.2018; Creative Commons licence).
+        Video of a talk at the conference <span lang="fr">Capitole du Libre</span> in Toulouse, France, on 18.11.2018.<!--https://2017.capitoledulibre.org/programme/#making-debian-for-everybody-->
+        Talk abstract:
+        <q>The Debian accessibility team aims at making Debian work nicely for people with disabilities. This of course means packaging accessibility-related software and bringing accessibility fixes in, but it also means integrating notions of accessibility into all stages of Debian, from d-i bootup to bug reporting. We will discuss past achievements and challenges ahead, which everybody can help with.</q>
+      </li>
+      <li><span lang="fr">Samuel Thibault</span>:
         <a href="https://www.youtube.com/watch?v=Sfq6i4TivE4">Thanks for maintaining a desktop environment. But is it accessible?</a>
         (45 minutes): video recording of a presentation at the
         <a href="http://debconf15.debconf.org/index.xhtml">Debian Conference</a> in August 2015.
