Add links to Terminology, Accessibility for Computer Users

--- a/crowdsourcing.html
+++ b/crowdsourcing.html
@@ -37,6 +37,8 @@
       <li class="active"><a aria-current="page" href="crowdsourcing.html" title="Crowdsourcing &amp; Human-Based Computation">Crowdsourcing</a></li>
       <li><a href="assistivetechnology.html">Assistive Technology</a></li>
       <li><a href="tts.html"><abbr title="Text-to-speech software">TTS</abbr></a></li>
+      <li><a href="accessibilityforusers.html">Accessibility for Computer Users</a></li>
+      <li><a href="terminology.html">Terminology</a></li>
     </ul>
   </nav>
 
