Add: Fourdan: Accessibility Features for Mutter/GNOME Shell on Wayland

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -354,6 +354,19 @@
       </li>
     </ul>
 
+    <h2>Other Links</h2>
+    <ul>
+      <li>Fourdan, Oliver:
+        <a href="https://www.youtube.com/watch?v=391yy2yZGGs">Accessibility Features for Mutter/GNOME Shell on Wayland</a>
+        (<i class="ytchannel">GUADEC</i> on YouTube, 21 minutes, 31.08.2019; Creative Commons Attribution licence).
+        <br /><blockquote>
+          <p>Historically, accessibility features in GNOME on X11 were handled by different components such as Xorg itself for keyboard accessibility, “mousetweaks” for mouse accessibility, GNOME settings daemon for locate pointer, <abbr>AT</abbr>-<abbr>SPI</abbr> registry daemon, etc.</p>
+          <p>All these features relied on the ability to query the input devices on behalf of other clients or generate fake input events, neither of which is possible with Wayland anymore.</p>
+          <p>The purpose of this talk is to present the current status and the technical solutions chosen in mutter/gnome-shell to make these features available on both X11 and Wayland.</p>
+        </blockquote>
+        <!--@@rewatch-->
+      </li>
+    </ul>
   </main>
 
   <footer>
