Add Accessibility in Ubuntu Desktop (TALP Karnataka)

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -366,6 +366,11 @@
         </blockquote>
         <!--@@rewatch-->
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=Eq2fJFVixtg">Accessibility in Ubuntu Desktop</a>
+        (<i class="ytchannel"><abbr>TALP</abbr> Karnataka English Videos</i> on YouTube, 7 minutes, 20.02.2018).
+        This is a quick overview of the features available through the Universal Access settings.
+      </li>
     </ul>
   </main>
 
