--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -371,6 +371,16 @@
         (<i class="ytchannel"><abbr>TALP</abbr> Karnataka English Videos</i> on YouTube, 7 minutes, 20.02.2018).
         This is a quick overview of the features available through the Universal Access settings.
       </li>
+      <li>
+        <a href="http://emacspeak.sourceforge.net/">Emacspeak --The Complete Audio Desktop</a>
+        <q>is a speech interface that allows visually impaired users to interact independently and efficiently with the computer</q>.
+        <!--Older page: https://www.cs.cornell.edu/Info/People/raman/emacspeak/emacspeak.html -->
+        See also T. V. Raman's page
+        <a href="https://tvraman.github.io/emacspeak/tips.html">Tips And Tricks For The Emacspeak Audio Desktop</a>,
+        which was last updated in 2002, and
+        <a href="https://en.wikipedia.org/wiki/Emacspeak">Emacspeak on Wikipedia</a>.
+        <!--GitHub repo: https://github.com/tvraman/emacspeak -->
+      </li>
     </ul>
   </main>
 
