Add Compiz Reloaded: Accessibility Tour

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -381,6 +381,11 @@
         <a href="https://en.wikipedia.org/wiki/Emacspeak">Emacspeak on Wikipedia</a>.
         <!--GitHub repo: https://github.com/tvraman/emacspeak -->
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=ufwE8Wc7AI0">Compiz Reloaded: Accessibility Tour</a>
+        (<i class="ytchannel">Compiz Reloaded: Accessibility Tour</i> on YouTube, 15 minutes, 08.04.2016).
+        See also <a href="http://www.cupoflinux.com/SBB/index.php/topic,4408.0.html">Compiz-Reloaded - TUTORIAL THREAD</a>.
+      </li>
     </ul>
   </main>
 
