Add Clark: Accessibility in Linux is good (but could be much better)

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -386,6 +386,10 @@
         (<i class="ytchannel">Compiz Reloaded: Accessibility Tour</i> on YouTube, 15 minutes, 08.04.2016).
         See also <a href="http://www.cupoflinux.com/SBB/index.php/topic,4408.0.html">Compiz-Reloaded - TUTORIAL THREAD</a>.
       </li>
+      <li>Clark, Kendell:
+        <a href="https://opensource.com/life/15/5/accessibility-linux">Accessibility in Linux is good (but could be much better)</a>,
+        <i class="website">Opensource.com</i>, 04.05.2015.
+      </li>
     </ul>
   </main>
 
