Add quote Sarah Higley (Twitter)

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -37,7 +37,6 @@
       <li><a href="crowdsourcing.html" title="Crowdsourcing &amp; Human-Based Computation">Crowdsourcing</a></li>
       <li><a href="assistivetechnology.html">Assistive Technology</a></li>
       <li><a href="tts.html"><abbr title="Text-to-speech software">TTS</abbr></a></li>
-
       <li><a href="accessibilityforusers.html">Accessibility for Computer Users</a></li>
       <li><a href="terminology.html">Terminology</a></li>
       <li><a href="miscellaneous-links.html">Miscellaneous Links</a></li>
@@ -45,6 +44,14 @@
   </nav>
 
   <main>
+
+    <blockquote id="introquote" cite="https://twitter.com/codingchaos/status/1121175191847985153">
+      <p>I had to call a bank today about an account I opened a long time ago, but was having trouble accessing. I mentioned on the call that their website was inaccessible.</p>
+      <p>Their response? <q>Blind people don’t use websites.</q></p>
+      <p>I’m closing the account. 😤</p>
+      <p><cite><a href="https://twitter.com/codingchaos/status/1121175191847985153">JavaScript developer Sarah Higley on Twitter, 25.04.2019</a></cite>
+    </blockquote>
+
     <h2>Web Accessibility: General / Introductions</h2>
     <ul>
       <li>University of Washington:
