Add Virtual Magnifying Glass

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -217,6 +217,10 @@
         <i class="website">Marlem-Software</i>, 09.07.2018.
       </li>
       <li>
+        <a href="http://magnifier.sourceforge.net/">Virtual Magnifying Glass</a>:
+        <q>A free, open source, screen magnifier, for Windows, Linux, FreeBSD and Mac OS X.</q>
+      </li>
+      <li>
         <a href="https://www.youtube.com/watch?v=JnXHgtRKVnk">Blind Accessibility of Debian / XFCE - Random Access Review Ep6</a>
         (<i class="ytchannel">TheFake<abbr>VIP</abbr></i> on YouTube, 9 minutes, 02.07.2019).
         This video reviews features such as Orca (Xfce's file mananger Thunar is not accessible with Orca),
