Add KDE AT: KMag, KMouseTool, KMouth

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -190,6 +190,11 @@
       </li>
       <li>KDE Community Wiki:
         <a href="https://community.kde.org/Accessibility" title="Accessibility in the KDE Community Wiki">Accessibility</a>.
+        <br />See also the applications
+        <a href="https://kde.org/applications/utilities/org.kde.kmag">KMag</a>,
+        <a href="https://kde.org/applications/utilities/org.kde.kmousetool">KMouseTool</a>
+        and
+        <a href="https://kde.org/applications/utilities/org.kde.kmouth">KMouth</a>.
       </li>
       <li>KDE UserBase Wiki:
         <a href="https://userbase.kde.org/Applications/Accessibility" title="Applications/Accessibility in the KDE UserBase Wiki">Applications/Accessibility</a>:
