Add Caspers: Formulardesign

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -633,6 +633,10 @@
         <i class="website">Einfach für Alle</i></span> (no date).
         <br />This is the first part of a series of articles about accessible forms.
       </li>
+      <li><span lang="de">Caspers, Thomas:
+        <a href="https://www.einfach-fuer-alle.de/artikel/barrierefreie-formulare/design/" hreflang="de">Formulardesign</a>,
+        <i class="website">Einfach für Alle</i></span> (no date).
+      </li>
     </ul>
 
     <h2 id="captcha"><abbr title="Completely Automated Public Turing test to tell Computers and Humans Apart">CAPTCHA</abbr></h2>
