magnifier (on githum.com)

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -233,6 +233,9 @@
         <q>A free, open source, screen magnifier, for Windows, Linux, FreeBSD and Mac OS X.</q>
       </li>
       <li>
+        <a href="https://github.com/minos-org/magnifier">magnifier [freeze version by minos-org]</a>
+      </li>
+      <li>
         <a href="https://www.youtube.com/watch?v=JnXHgtRKVnk">Blind Accessibility of Debian / XFCE - Random Access Review Ep6</a>
         (<i class="ytchannel">TheFake<abbr>VIP</abbr></i> on YouTube, 9 minutes, 02.07.2019).
         This video reviews features such as Orca (Xfce's file mananger Thunar is not accessible with Orca),
