--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -409,6 +409,11 @@
         <a href="https://opensource.com/life/15/5/accessibility-linux">Accessibility in Linux is good (but could be much better)</a>,
         <i class="website">Opensource.com</i>, 04.05.2015.
       </li>
+      <li>
+        <a href="https://sourceforge.net/projects/sue/"><abbr>SUE</abbr>: Screenreader &amp; Usability Extensions</a>:
+        beta version of a Linux screen reader that was intended as an alternative to Orca.
+        Development halted in 2010 due to a lack of project funding.
+      </li>
     </ul>
   </main>
 
