--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -414,6 +414,10 @@
         beta version of a Linux screen reader that was intended as an alternative to Orca.
         Development halted in 2010 due to a lack of project funding.
       </li>
+      <li>
+        <a href="https://wiki.gnome.org/Attic/LSR"><abbr title="Linux Screen Reader">LSR</abbr></a>:
+        an older screen reader for Gnome that was later replaced with Orca.
+      </li>
     </ul>
   </main>
 
