Add: Boxhall: Testing for Accessibility (linux.conf.au)

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -418,6 +418,12 @@
         <a href="https://wiki.gnome.org/Attic/LSR"><abbr title="Linux Screen Reader">LSR</abbr></a>:
         an older screen reader for Gnome that was later replaced with Orca.
       </li>
+      <li>Boxhall, Alice:
+        <a href="https://www.youtube.com/watch?v=1dLFzYIz_RU">Testing for Accessibility</a>
+        (<i class="ytchannel">Konstantin Bläsi</i> on YouTube, 46 minutes, 13.01.2014).
+        This is a recording of a talk at linux.conf.au 2014. Alice Boxhall is a Chromium developer at Google.
+        <!--@@todo summarise-->
+      </li>
     </ul>
   </main>
 
