Add Harman & Lang: Accessibility and Debian (2017)

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -424,6 +424,11 @@
         This is a recording of a talk at linux.conf.au 2014. Alice Boxhall is a Chromium developer at Google.
         <!--@@todo summarise-->
       </li>
+      <li>Hartman, Sam; Lang, Mario:
+        <a href="https://www.youtube.com/watch?v=jspXd3EhrF4">Accessibility and Debian</a>
+        (<i class="ytchannel">DebConf Videos</i> on YouTube, 49 minutes, 24.11.2017).
+        This video is a recording of a talk at the DebConf in Caceres, Spain in July 2009.
+      </li>
     </ul>
   </main>
 
