Add Colantonio: Top 21 Accessibility Testing Tools for Automation

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -91,6 +91,10 @@
         describes the strengths and weaknesses of some of the most popular accessibility
         evaluation tools.
       </li>
+      <li>Colantonio, Joe:
+        <a href="https://testguild.com/accessibility-testing-tools-automation/">Top 21 Accessibility Testing Tools for Automation</a>,
+        <i class="website">Test Guild</i>, 09.02.2018, updated 24.11.2018.
+      </li>
     </ul>
 
     <h2>Individual Tools</h2>
