Add class ytchannel

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -211,7 +211,7 @@
         <ul>
           <li>Dodson, Rob:
             <a href="https://www.youtube.com/watch?v=jC_7NnRdYb0">Automated testing with aXe -- A11ycasts #15</a>
-            (Google Chrome Developers on YouTube, 12 minutes, 17.03.2017).<!--CC-BY licence-->
+            (<i class="ytchannel">Google Chrome Developers</i> on YouTube, 12 minutes, 17.03.2017).<!--CC-BY licence-->
             <br />Note that this tutorial is based on an older version of axe.
           </li>
           <li>Sutton, Marcy:
