Add: Reddit: Preferred Linux distro for people with visual impairment?

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -429,6 +429,14 @@
         (<i class="ytchannel">DebConf Videos</i> on YouTube, 49 minutes, 24.11.2017).
         This video is a recording of a talk at the DebConf in Caceres, Spain in July 2009.
       </li>
+      <li>
+        <a href="https://www.reddit.com/r/linuxquestions/comments/am4pl0/preferred_linux_distro_for_people_with_visual/">Preferred Linux distro for people with visual impairment?</a>
+        This quesion was posted on Reddit in February 2019.
+      </li>
+      <li>Dahlke, Karl:
+        <a href="http://www.eklhad.net/philosophy.html">Command Line Programs for the Blind</a>
+        (no date, possibly updated in 2016).
+      </li>
     </ul>
   </main>
 
