--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -641,6 +641,10 @@
         <a href="https://www.einfach-fuer-alle.de/artikel/barrierefreie-formulare/html-css/" hreflang="de">Technik: <abbr>HTML</abbr> &amp; <abbr>CSS</abbr> für Formulare</a>,
         <i class="website">Einfach für Alle</i></span> (no date).
       </li>
+      <li><span lang="de">
+        <a href="https://www.barrierefreies-webdesign.de/knowhow/formulare/" hreflang="de">Klare Formulare</a>,
+        <i class="website">Barrierefreies Webdesign</i> (no date).
+      </li>
     </ul>
 
     <h2 id="captcha"><abbr title="Completely Automated Public Turing test to tell Computers and Humans Apart">CAPTCHA</abbr></h2>
