Add: Readability of web content in German

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1047,6 +1047,38 @@
         <a href="https://easy-to-read.eu/">Easy-to-Read: European Easy-to-Read Guidelines</a>.
       </li>
     </ul>
+    <p>Readability of web content in German:</p>
+    <ul>
+      <li><span lang="de">Morsbach, Jörg:
+        <a href="https://www.fronta11y.org/leichte-sprache-schwere-sprache/" hreflang="de">Leichte Sprache – schwere Sprache</a>,
+        <i class="website">Fronta11y</i></span>, 16.05.2019.
+      </li>
+      <li><span lang="de">Bauer, Wacki:
+        <a href="https://www.philognosie.net/kommunikation/lesbarkeits-test-wie-eingaengig-sind-meine-texte" hreflang="de">Lesbarkeits-Test: Wie eingängig sind meine Texte?</a>,
+        <i class="website">Philognosie</i></span>, 26.06.2013.
+      </li>
+      <li><span lang="de">
+        <a href="https://www.bundesfachstelle-barrierefreiheit.de/DE/Praxishilfen/Information-und-Kommunikation/Leichte-Sprache/leichte-sprache_node.html" hreflang="de">Praxishilfen: Leichte Sprache</a>,
+        <i class="website">Bundesfachstelle Barrierefreiheit</i></span> (no date).
+      </li>
+      <li>
+        <a href="http://gestaltungsinstitut.de/designforschungsprojekt-leichte-sprache" hreflang="de" lang="de">Designforschungsprojekt Leichte Sprache</a>.
+        <!--@@check downloads!-->
+      </li>
+      <li>
+        <a href="https://www.uni-hildesheim.de/leichtesprache/" hreflang="de" lang="de">Forschungsstelle Leichte Sprache</a>.
+        <!--@@M.A. Barrierefreie Kommunikation: https://www.uni-hildesheim.de/leichtesprache/ma-barrierefreie-kommunikation/ -->
+      </li>
+      <!--
+      <li><span lang="de">
+        <a href="" hreflang="de"></a>,
+        <i class=""></i></span>,
+      </li>
+      <li>
+        <a href=""></a>
+      </li>
+      -->
+    </ul>
 
     <h2>Web Design for Dyslexia</h2>
     <ul>
