Expand description Xfce 4.14 documentation

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -207,7 +207,8 @@
       </li>
       <li>Xfce 4.14 Documentation:
         <a href="https://docs.xfce.org/xfce/xfce4-settings/4.14/accessibility">Accessibility (Xfce4-settings)</a>.
-        This page mentions Orca (from the Gnome project), keyboard accessibility (sticky keys, slow keys, bounce keys) and mouse emulation.
+        This page mentions Orca (from the Gnome project), keyboard accessibility (sticky keys, slow keys, bounce keys) and mouse emulation,
+        but does not say anything about zooming or magnification.
       </li>
       <li>Xfce project:
         <a href="https://wiki.xfce.org/releng/4.10/roadmap/accessibility">Accessibility in Xfce Core 4.10 Roadmap</a>.
