Add: Tyson: Visual Accessibility & Zoom in Mint and Other GNOME Distros

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -252,6 +252,11 @@
         and how to adapt certain specific settings.
         Note that Matt is not an accessibility expert, so the process he presents may not be optimal.
       </li>
+      <li>Tyson, Elliott:
+        <a href="https://www.youtube.com/watch?v=dtmfZg6CE7Y">Visual Accessibility &amp; Zoom in Mint and Other GNOME Distros</a>
+        (<i class="ytchannel">Elliott Tyson</i> on YouTube, 15 minutes, 18.01.2017).
+        <!--@@@ ca. 5:00: Elliott could not figure out what "Scroll at screen edges" does.-->
+      </li>
     </ul>
 
     <h2>Specialised Linux Distributions</h2>
