Add: Xfwm4 Zoom Desktop

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -257,6 +257,11 @@
         (<i class="ytchannel">Elliott Tyson</i> on YouTube, 15 minutes, 18.01.2017).
         <!--@@@ ca. 5:00: Elliott could not figure out what "Scroll at screen edges" does.-->
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=uNcgIf_zo2w">Xfwm4 Zoom Desktop - Zoom In and Out - Linux XFCE</a>
+        (<i class="ytchannel">gotbletu</i> on YouTube, 4 minutes, 25.06.2016).
+        <br />The zoom feature demonstrated in this video magnifies the desktop without magnifying the mouse pointer.
+      </li>
     </ul>
 
     <h2>Specialised Linux Distributions</h2>
