Add: Linux Tip: Use Zoom for HiDPI and Accessibility in Linux Mint

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -262,6 +262,11 @@
         (<i class="ytchannel">gotbletu</i> on YouTube, 4 minutes, 25.06.2016).
         <br />The zoom feature demonstrated in this video magnifies the desktop without magnifying the mouse pointer.
       </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=kKxoEOvYGy4">Linux Tip | Use Zoom for HiDPI and Accessibility in Linux Mint</a>
+        (<i class="ytchannel">Joe Collins</i> on YouTube, 12 minutes, 26.05.2017).
+        <br />This video focuses on Linux Mint Cinnamon. The Cinnamon desktop's accessibility features are similar to those in GNOME 3.
+      </li>
     </ul>
 
     <h2>Specialised Linux Distributions</h2>
