Add: Unix & Linux SE: Is there a way to zoom in on the screen AND mouse pointer in any Linux distribution?

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -267,6 +267,10 @@
         (<i class="ytchannel">Joe Collins</i> on YouTube, 12 minutes, 26.05.2017).
         <br />This video focuses on Linux Mint Cinnamon. The Cinnamon desktop's accessibility features are similar to those in GNOME 3.
       </li>
+      <li>
+        <a href="https://unix.stackexchange.com/q/551184/158988">Is there a way to zoom in on the screen AND mouse pointer in any Linux distribution?</a>
+        This question was posted on Unix &amp; Linux Stack Exchange in November 2019.
+      </li>
     </ul>
 
     <h2>Specialised Linux Distributions</h2>
