Add: Accessibility Club Summit 2019

--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
       <li>
         <a href="http://www.ict4ial.eu/"><abbr>ICT4IAL</abbr>: <abbr>ICT</abbr> for Information Accessibility in Learning</a>.
       </li>
+      <li>
+        <a href="https://accessibility-club.org/event/accessibility-club-summit-2019">Accessibility Club Summit 2019 (November 16th-17th, 2019)</a>.
+      </li>
       <!--
       <li>
         <a href=""></a>
