--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -593,6 +593,23 @@
         The
         <a href="https://github.com/GoogleChrome/lighthouse">Lighthouse source code</a>
         is available on GitHub under the terms of the Apache 2.0 licence.
+        <br />See also the following blog posts and articles:
+        <ul>
+          <li>
+            <a href="https://www.youtube.com/watch?v=d98CAgQNeaM">Lighthouse - Totally Tooling Tips</a>
+            (<i class="ytchannel">Google Chrome Developers</i> on YouTube, 8 minutes, 08.09.2017).
+            <br />This is a general introduction to Lighthouse for webdevelopers
+            without specific attention to accessibility evaluation.
+          </li>
+          <li>Dodson, Rob:
+            <a href="https://www.youtube.com/watch?v=b0Q5Zp_yKaU">The new way to test accessibility with Chrome DevTools - A11ycasts #23</a>
+            (<i class="ytchannel">Google Chrome Developers</i> on YouTube, 5 minutes, 18.08.2017).<!--CC-BY licence-->
+          </li>
+          <li>Moshe, Dor:
+            <a href="https://hackernoon.com/the-new-chrome-devtool-feature-you-want-to-know-about-c0d2371151d6">The New Chrome DevTool Feature You Want to Know About</a>,
+            <i class="blog">Hacker Noon</i>, 06.06.2017 (eight-minute read).
+          </li>
+        </ul>
       </li>
       <!--
       <li>
