Add: AskUbuntu Linux Equivalent of Windows Ctrl to show Mouse Pointer

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -271,6 +271,10 @@
         <a href="https://unix.stackexchange.com/q/551184/158988">Is there a way to zoom in on the screen AND mouse pointer in any Linux distribution?</a>
         This question was posted on Unix &amp; Linux Stack Exchange in November 2019.
       </li>
+      <li>
+        <a href="https://askubuntu.com/q/964385/677341">Linux Equivalent of Windows Ctrl to show Mouse Pointer</a>.
+        This question was posted on AskUbuntu in October 2017.
+      </li>
     </ul>
 
     <h2>Specialised Linux Distributions</h2>
