Add: de Oliveira: Leitlinien/Regeln der einfachen Sprache

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1057,6 +1057,10 @@
         <a href="https://www.philognosie.net/kommunikation/lesbarkeits-test-wie-eingaengig-sind-meine-texte" hreflang="de">Lesbarkeits-Test: Wie eingängig sind meine Texte?</a>,
         <i class="website">Philognosie</i></span>, 26.06.2013.
       </li>
+      <li><span lang="de">de Oliveira, Domingos:
+        <a href="https://www.netz-barrierefrei.de/wordpress/einfache-sprache/regeln-fuer-einfache-sprache/" hreflang="de">Leitlinien/Regeln der einfachen Sprache</a>,
+        <i class="website">netz-barrierefrei.de</i></span>, 16.06.2016, updated 07.09.2019.
+      </li>
       <li><span lang="de">
         <a href="https://www.bundesfachstelle-barrierefreiheit.de/DE/Praxishilfen/Information-und-Kommunikation/Leichte-Sprache/leichte-sprache_node.html" hreflang="de">Praxishilfen: Leichte Sprache</a>,
         <i class="website">Bundesfachstelle Barrierefreiheit</i></span> (no date).
