Add: Loukil: Lighthouse custom audits tutorial

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -609,6 +609,10 @@
             <a href="https://hackernoon.com/the-new-chrome-devtool-feature-you-want-to-know-about-c0d2371151d6">The New Chrome DevTool Feature You Want to Know About</a>,
             <i class="blog">Hacker Noon</i>, 06.06.2017 (eight-minute read).
           </li>
+          <li>Loukil, Aymen:
+            <a href="https://www.aymen-loukil.com/en/blog-en/google-lighthouse-custom-audits/">Lighthouse custom audits tutorial</a>,
+            <i class="blog">Aymen Loukil</i>, 19.11.2018. (This blog post does not mention accessibility audits.)
+          </li>
         </ul>
       </li>
       <!--
