Add: Cashin: Google Selects Deque’s axe for Chrome DevTools

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -613,6 +613,10 @@
             <a href="https://www.aymen-loukil.com/en/blog-en/google-lighthouse-custom-audits/">Lighthouse custom audits tutorial</a>,
             <i class="blog">Aymen Loukil</i>, 19.11.2018. (This blog post does not mention accessibility audits.)
           </li>
+          <li>Cashin, Caitlin:
+            <a href="https://www.deque.com/blog/google-selects-deques-axe-chrome-devtools/">Google Selects Deque’s axe for Chrome DevTools</a>,
+            <i class="blog">Deque blog</i>, 28.09.2017.
+          </li>
         </ul>
       </li>
       <!--
