--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -617,6 +617,16 @@
             <a href="https://www.deque.com/blog/google-selects-deques-axe-chrome-devtools/">Google Selects Deque’s axe for Chrome DevTools</a>,
             <i class="blog">Deque blog</i>, 28.09.2017.
           </li>
+          <li>Kennedy, James:
+            <a href="https://www.bostonwebdesigners.net/news/lighthouse-accessibility-audit-tool/">Will the Lighthouse accessibility audit tool help make the web more accessible?</a>,
+            <i class="website">Boston Web Designers</i>, 22.11.2017.
+          </li>
+          <!--Not about Lighthouse:
+          <li>
+            <a href="https://www.youtube.com/watch?v=56zCnwj58e4">Accessibility Testing - Totally Tooling Tips</a>
+            (<i class="ytchannel">Google Chrome Developers</i> on YouTube, 7 minutes, 03.11.2017).
+          </li>
+          -->
         </ul>
       </li>
       <!--
