Ad: Bigby: Top 25 Awesome Accessibility Testing Tools for Websites

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -727,6 +727,11 @@
       <a href="https://medium.com/myplanet-musings/comparing-3-top-automated-accessibility-testing-tools-wave-tenon-io-and-google-lighthouse-d3897d7bb311">Comparing 3 Top Automated Accessibility Testing Tools: WAVE, Tenon.io, and Google Lighthouse</a>,
       <i class="blog">Myplanet on Medium</i>, 24.07.2018.
     </li>
+    <li>Bigby, Garenne:
+      <a href="https://dynomapper.com/blog/27-accessibility-testing/246-top-25-awesome-accessibility-testing-tools-for-websites">Top 25 Awesome Accessibility Testing Tools for Websites</a>,
+      <i class="blog">Dynomapper blog</i>, 16.12.2018.
+      <br />It is not clear what criteria were used to create this ranking, except for making sure that the company's own tool was listed first.
+    </li>
   </ul>
 
   </main>
