--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -732,6 +732,11 @@
       <i class="blog">Dynomapper blog</i>, 16.12.2018.
       <br />It is not clear what criteria were used to create this ranking, except for making sure that the company's own tool was listed first.
     </li>
+    <li>Stanton, Paul.
+      <a href="https://medium.com/pulsar/which-accessibility-testing-tool-should-you-use-e5990e6ef0a">Which accessibility testing tool should you use?</a>,
+      <i class="blog">Pulsar (on Medium)</i>, 17.05.2018.
+      <!--@@summarise-->
+    </li>
   </ul>
 
   </main>
