Add: Smith: Web Accessibility Practitioners Survey #2 Results

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -737,6 +737,14 @@
       <i class="blog">Pulsar (on Medium)</i>, 17.05.2018.
       <!--@@summarise-->
     </li>
+    <li>Smith, Jared:
+      <a href="https://webaim.org/blog/practitionersurvey2/">Web Accessibility Practitioners Survey #2 Results</a>,
+      <i class="blog">Web<abbr>AIM</abbr> blog</i>, 31.05.2018.
+      <br />The summary states that accessibility practitioners use a wide variety of evaluation tools,
+      <q>with WAVE, aXe, Google Developer Tools, online contrast checkers, and accessibility bookmarklets/scripts being most commonly used</q>.
+      With regard to screen reader testing, a notable finding is the
+      <q>noted differences in the screen readers used by respondents with disabilities (primarily JAWS) vs. those without disabilities (primarily NVDA and VoiceOver)</q>.
+    </li>
   </ul>
 
   </main>
