Add: Fischer: How many WCAG 2.1 SCs are testable with automated tests only?

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -745,6 +745,10 @@
       With regard to screen reader testing, a notable finding is the
       <q>noted differences in the screen readers used by respondents with disabilities (primarily JAWS) vs. those without disabilities (primarily NVDA and VoiceOver)</q>.
     </li>
+    <li>Fischer, Detlev:
+      <a href="https://lists.w3.org/Archives/Public/w3c-wai-gl/2019JulSep/0140.html">How many WCAG 2.1 SCs are testable with automated tests only?</a>
+      (message to the mailing list of the <abbr>W3C</abbr>'s Accessibility Guidelines Working Group, dated 20 August 2019).
+    </li>
   </ul>
 
   </main>
