Add: IBM: AccProbe

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -749,6 +749,22 @@
       <a href="https://lists.w3.org/Archives/Public/w3c-wai-gl/2019JulSep/0140.html">How many WCAG 2.1 SCs are testable with automated tests only?</a>
       (message to the mailing list of the <abbr>W3C</abbr>'s Accessibility Guidelines Working Group, dated 20 August 2019).
     </li>
+    <li><abbr>IBM</abbr> Accessibility Research:
+      <a href="https://www.ibm.com/able/accprobe.html">AccProbe</a>.
+      <br /><abbr>IBM</abbr>'s description:
+      <blockquote>
+        <p>Standalone, Eclipse Rich Client Platform application that combines the functionality of numerous accessibility inspection and event management tools into one application to test and correct accessibility violations.</p>
+        <p>Provides access to the Microsoft Active Accessibility (<abbr>MSAA</abbr>) and iAccessible2 <abbr>API</abbr>s implemented in an application or rendered document.</p>
+      </blockquote>
+      See also the YouTube video
+      <a href="https://www.youtube.com/watch?v=79VF-BdQ0Xw"><abbr>IBM</abbr> Accessibility Open Source: AccProbe</a>
+      (4 minutes, 27.03.2018).
+    </li>
+    <!--
+    <li>
+      <a href=""></a>
+    </li>
+    -->
   </ul>
 
   </main>
