Add: Créer un MOOC inclusif

--- a/courses.html
+++ b/courses.html
@@ -225,6 +225,14 @@
         The first run started on 5 June 2017.
       </li>
       <li>
+        <a href="https://www.fun-mooc.fr/courses/course-v1:FUN+00114+session01/about" hreflang="fr" lang="fr">Créer un <abbr>MOOC</abbr> inclusif</a>.
+        This is a <abbr>MOOC</abbr> created by Koena that is hosted on <abbr>FUN</abbr>.
+        The first run is scheduled from 25.11.2019 till 12.01.2020; the course requires an estimated two hours of study per week.
+        <br />See also
+        <a href="https://www.fun-mooc.fr/news/projet-eiffela-vers-une-experience-utilisateur-enr/" hreflang="fr" lang="fr">Projet <abbr>EIFFELa</abbr>&nbsp;: Vers une expérience utilisateur enrichie sur <abbr>FUN-MOOC</abbr></a>
+        (12.09.2016).
+      </li>
+      <li>
         <a href="https://www.coursera.org/learn/disability-awareness">Disability Awareness and Support</a>
         is a four-week course by the University of Pittsburgh hosted on Coursera. According to the course description,
         <q>The goal of this course is to promote equal opportunity and the full participation of students with disabilities in higher education by helping participants advance their awareness of the meaning of accessibility in education.</q>
