Add: ZweiterBlick: Microsoft Office Word

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -139,6 +139,10 @@
         <a href="https://www.lexdis.org.uk/guides/making-microsoft-word-documents-accessible/">Making Word Processing Documents Accessible</a>,
         <i class="website">Lexdis</i> (no date).
       </li>
+      <li><a href="https://www.zweiterblick.at/index.php?site=word" hreflang="de">Microsoft Office Word</a>,
+        <i class="website" lang="de">Zweiter Blick</i> (no date).
+        <br />This article covers Microsoft Word versions 2010 &mdash; 2016.
+      </li>
     </ul>
     <!--AccessODF: Mapping AccessODF Checks to Web Content Accessibility Guidelines (WCAG) 2.0: http://accessodf.sourceforge.net/MappingToWCAG.html -->
 
