Add: Erle: PDF/UA Basics

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -154,6 +154,11 @@
       <li>Adobe:
         <a href="https://www.adobe.com/accessibility/products/acrobat/training.html">Adobe Acrobat Accessibility: Training Resources</a>.
       </li>
+      <li>Erle, Markus:
+        <a href="https://www.youtube.com/watch?v=YcRbZgPVfQ4"><abbr>PDF</abbr>/<abbr>UA</abbr> Basics &mdash; Markus Erle, wertewerk</a>
+        (<i class="ytchannel"><abbr>PDF</abbr> Association</i>, 22.06.2014.
+        This is a video recording of a presentation at the <abbr>PD</abbr>F Days Europe 2014 (June 2014).
+      </li>
       <li>Accede <abbr>PDF</abbr> Project:
         <a href="http://www.pdf-accessible.com/en/">Accessibility of <abbr>PDF</abbr></a>
         (English translation of
